--- a/frontend/app/views/spree/products/show.html.erb
+++ b/frontend/app/views/spree/products/show.html.erb
@@ -31,6 +31,7 @@
           <h1 class="product-title mt-2" itemprop="name"><%= @product.name %></h1>
 
           <div itemprop="description" data-hook="description">
+            Adding to description
             <%= product_description(@product) %>
           </div>
 
